fix: Align cryptocurrency names in tables

--- a/frontend/scss/elements/_table.scss
+++ b/frontend/scss/elements/_table.scss
@@ -2,7 +2,9 @@
 @use "../mixins/center-flex" as *;
 
 .crypto-name-wrap {
-    @include center-flex();
+    display: flex;
+    align-items: center;
+    padding-left: 10%;
     gap: 10px;
 
     .crypto-name {
